--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,8 @@
-font_family OperatorMono Nerd Font Medium 
-font_size 11.0
+font_family      OperatorMono Nerd Font Medium
+bold_font        OperatorMono Nerd Font Medium 
+italic_font      OperatorMono Nerd Font Medium 
+bold-italic_font OperatorMono Nerd Font Medium 
+font_size 14.0
 enable_audio_bell no
 resize_debounce_time 0.0
 repaint_delay 1
@@ -64,7 +67,7 @@ color7   #e0def4
 color15  #e0def4
 
 confirm_os_window_close 0
-background_opacity 0.95
+background_opacity 0.90
 kitty_mod alt
 
 scrollback_pager nvim +"source /home/justin/.config/kitty/vi-mode.lua"
