--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,5 @@
 font_family      OperatorMono Nerd Font Medium
-bold_font        OperatorMono Nerd Font Medium 
-italic_font      OperatorMono Nerd Font Medium 
-bold-italic_font OperatorMono Nerd Font Medium 
-font_size 14.0
+font_size 18.0
 enable_audio_bell no
 resize_debounce_time 0.0
 repaint_delay 1
@@ -16,6 +13,9 @@ copy_on_select no
 tab_bar_min_tabs 1
 tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{index}:{title}"
 tab_bar_align right
+macos_menubar_title_max_length 0
+hide_window_decorations titlebar-only
+macos_show_window_title_in none
 
 foreground               #e0def4
 background               #191724
