--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -70,7 +70,7 @@ confirm_os_window_close 0
 background_opacity 0.90
 kitty_mod alt
 
-scrollback_pager nvim +"source /home/justin/.config/kitty/vi-mode.lua"
+scrollback_pager nvim +"source /home/justinpolis/.config/kitty/vi-mode.lua"
 
 map kitty_mod+s show_scrollback
 map kitty_mod+t new_tab
