--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -33,6 +33,8 @@ inactive_tab_foreground  #6e6a86
 inactive_tab_background  #191724
 active_border_color      #31748f
 inactive_border_color    #403d52
+active_tab_font_style   normal
+inactive_tab_font_style normal
 
 # black
 color0   #26233a
@@ -70,7 +72,7 @@ confirm_os_window_close 0
 background_opacity 0.90
 kitty_mod alt
 
-scrollback_pager nvim +"source /home/justinpolis/.config/kitty/vi-mode.lua"
+scrollback_pager nvim +"source /Users/justinpolis/.config/kitty/vi-mode.lua"
 
 map kitty_mod+s show_scrollback
 map kitty_mod+t new_tab
