--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,7 @@
 font_family      OperatorMono Nerd Font Medium
+italic_font      Operator Mono Medium
+bold_font        Operator Mono Medium
+bold_italic_font Operator Mono Medium 
 font_size 18.0
 enable_audio_bell no
 resize_debounce_time 0.0
@@ -88,3 +91,4 @@ map kitty_mod+6 goto_tab 6
 map kitty_mod+7 goto_tab 7
 map kitty_mod+8 goto_tab 8
 map kitty_mod+9 goto_tab 9
+map f18 discard_event
