--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,14 +8,16 @@ resize_debounce_time 0.0
 repaint_delay 1
 window_margin_width 1
 input_delay 1
+shell .
 shell_integration fish
 allow_remote_control yes
 touch_scroll_multiplier 5.0
 mouse_hide_wait -0.1
 copy_on_select no
-tab_bar_min_tabs 1
-tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{index}:{title}"
-tab_bar_align right
+tab_bar_style hidden
+#tab_bar_min_tabs 1
+#tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{index}:{title}"
+#tab_bar_align right
 macos_menubar_title_max_length 0
 hide_window_decorations titlebar-only
 macos_show_window_title_in none
@@ -30,14 +32,14 @@ cursor_text_color        #e0def4
 
 url_color                #c4a7e7
 
-active_tab_foreground    #e0def4
-active_tab_background    #26233a
-inactive_tab_foreground  #6e6a86
-inactive_tab_background  #191724
-active_border_color      #31748f
-inactive_border_color    #403d52
-active_tab_font_style   normal
-inactive_tab_font_style normal
+#active_tab_foreground    #e0def4
+#active_tab_background    #26233a
+#inactive_tab_foreground  #6e6a86
+#inactive_tab_background  #191724
+#active_border_color      #31748f
+#inactive_border_color    #403d52
+#active_tab_font_style   normal
+#inactive_tab_font_style normal
 
 # black
 color0   #26233a
@@ -71,7 +73,7 @@ color14  #ebc7ba
 color7   #e0def4
 color15  #e0def4
 
-confirm_os_window_close 1
+confirm_os_window_close 0
 background_opacity 0.85
 kitty_mod alt
 
