--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,23 +1,22 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'rose-pine/tmux'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @rose_pine_variant 'main'
-set -g @rose_pine_bar_bg_disable 'on'
-set -g @rose_pine_bar_bg_disabled_color_option 'default'
-
-set -g @rose_pine_disable_active_window_menu 'on' # Disables the menu that shows the active window on the left
-
-set -g @rose_pine_default_window_behavior 'on' # Forces tmux default window list behaviour
-set -g @rose_pine_show_current_program 'on' # Forces tmux to show the current running program as window name
-
-set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
-set -g @rose_pine_current_window_icon '' # Changes the default icon to the left of the active window name
-set -g @rose_pine_folder_icon '' # Changes the default icon to the left of the current directory folder
-set -g @rose_pine_username_icon '' # Changes the default icon to the right of the hostname
-set -g @rose_pine_hostname_icon '󰒋' # Changes the default icon to the right of the hostname
-set -g @rose_pine_date_time_icon '󰃰' # Changes the default icon to the right of the date module
-set -g @rose_pine_window_status_separator " " # Changes the default icon that appears between window names
+## set -g @plugin 'rose-pine/tmux'
+## set -g @rose_pine_variant 'main'
+## set -g @rose_pine_bar_bg_disable 'on'
+## set -g @rose_pine_bar_bg_disabled_color_option 'default'
+##
+## set -g @rose_pine_disable_active_window_menu 'on' # Disables the menu that shows the active window on the left
+##
+## set -g @rose_pine_default_window_behavior 'on' # Forces tmux default window list behaviour
+## set -g @rose_pine_show_current_program 'on' # Forces tmux to show the current running program as window name
+##
+## set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
+## set -g @rose_pine_current_window_icon '' # Changes the default icon to the left of the active window name
+## set -g @rose_pine_folder_icon '' # Changes the default icon to the left of the current directory folder
+## set -g @rose_pine_username_icon '' # Changes the default icon to the right of the hostname
+## set -g @rose_pine_hostname_icon '󰒋' # Changes the default icon to the right of the hostname
+## set -g @rose_pine_date_time_icon '󰃰' # Changes the default icon to the right of the date module
+## set -g @rose_pine_window_status_separator " " # Changes the default icon that appears between window names
 
 bind h select-pane -L
 bind j select-pane -D 
@@ -56,5 +55,7 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 bind-key "s" display-popup -E -w 40% "sesh connect \"$(
 	sesh list -i | gum filter --limit 1 --placeholder 'Pick a sesh' --height 50 --prompt='⚡'
 )\""
+
+set-option -g status-style bg=default
 
 run '~/.config/tmux/plugins/tpm/tpm'
