--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,22 +1,7 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-## set -g @plugin 'rose-pine/tmux'
-## set -g @rose_pine_variant 'main'
-## set -g @rose_pine_bar_bg_disable 'on'
-## set -g @rose_pine_bar_bg_disabled_color_option 'default'
-##
-## set -g @rose_pine_disable_active_window_menu 'on' # Disables the menu that shows the active window on the left
-##
-## set -g @rose_pine_default_window_behavior 'on' # Forces tmux default window list behaviour
-## set -g @rose_pine_show_current_program 'on' # Forces tmux to show the current running program as window name
-##
-## set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
-## set -g @rose_pine_current_window_icon '' # Changes the default icon to the left of the active window name
-## set -g @rose_pine_folder_icon '' # Changes the default icon to the left of the current directory folder
-## set -g @rose_pine_username_icon '' # Changes the default icon to the right of the hostname
-## set -g @rose_pine_hostname_icon '󰒋' # Changes the default icon to the right of the hostname
-## set -g @rose_pine_date_time_icon '󰃰' # Changes the default icon to the right of the date module
-## set -g @rose_pine_window_status_separator " " # Changes the default icon that appears between window names
+
+bind-key R source-file ~/.config/tmux/tmux.conf \; display-message " Config successfully reloaded"
 
 bind h select-pane -L
 bind j select-pane -D 
